tests/unit/language/errors/assert_pass.arche
// RUN: %arche build -o %t %s && %t | grep done
#import { fmt }
entry :: system {
  fmt.printf("test\n");
  fmt.assert(1, "should not see this\n")();
  fmt.printf("done\n");
}

#run entry
